--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 /*CSS Document*/
 
 body{
-	background-color: #fdfdfd;
-	font-family: Helvetica, Arial, sans-serif;
-	color: #111;
-	font-size: 18px;
+	background-color: #FF99FF;
+	font-family: "Comic Sans MS", inherit;
+	color: #993300;
+	font-size: 20px;
 }
