--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,19 @@ body{
 	color: #993300;
 	font-size: 20px;
 }
+
+.blink {
+  animation: blink 1s steps(1, end) infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
