--- a/css/styles.css
+++ b/css/styles.css
@@ -2,24 +2,8 @@
 /*CSS Document*/
 
 body{
-	background-color: #FF99FF;
-	font-family: "Comic Sans MS", inherit;
-	color: #993300;
-	font-size: 20px;
-}
-
-.blink {
-  animation: blink 1s steps(1, end) infinite;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+	background-color: #fdfdfd;
+	font-family: Helvetica, Arial, sans-serif;
+	color: #111;
+	font-size: 18px;
 }
